--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 			<a href="/index" class="btn"><p>Home</p></a>
 			<a href="/resume.pdf" class="btn"><p>Resume</p></a>
 			<a href="/projects" class="btn"><p>Projects</p></a>
-			<a href="/gallery/index" class="btn"><p>Gallery</p></a>
+			<a href="/gallery" class="btn"><p>Gallery</p></a>
 		</header>
 
 		<main id="content" class="main-content" role="main">
