--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,6 @@
 		<header class="page-header" role="banner">
 			<!---<h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>--->
 			<!---<h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>--->
-			<h2>Lareine Jeng</h2>
 			{% if site.github.is_project_page %}
 				<a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
 			{% endif %}
@@ -35,8 +34,7 @@
 			{% endif %}
 			<a href="/index" class="btn"><p>Home</p></a>
 			<a href="/resume.pdf" class="btn"><p>Resume</p></a>
-			<a href="/projects" class="btn"><p>Projects</p></a>
-			<a href="/gallery" class="btn"><p>Gallery</p></a>
+			<a href="/work" class="btn"><p>My Work</p></a>
 		</header>
 
 		<main id="content" class="main-content" role="main">
