--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -55,6 +55,15 @@ img {
     height: auto;
 }
 
+media screen and (min-width: 64em)
+.page-header {
+    padding: 1rem 4rem;
+    padding-top: 1rem;
+    padding-right: 4rem;
+    padding-bottom: 1rem;
+    padding-left: 4rem;
+}
+
 @media only screen and (max-width: 768px) {
     .btn {
         width: 100%;
