--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -55,7 +55,7 @@ img {
     height: auto;
 }
 
-media screen and (min-width: 64em) {
+@media only screen and (min-width: 64em) {
     .page-header {
         padding: 1rem 4rem;
         padding-top: 1rem;
